- remove useless memory configuration from maven