@@ -76,7 +76,6 @@
 					<artifactId>maven-surefire-plugin</artifactId>
  					<version>2.8.1</version>
 					<configuration>
-					<argLine>-Xms512m -Xmx512m -XX:MaxPermSize=128M</argLine>
 					</configuration>
 				</plugin>
 				<plugin>
